--- a/src/components/UI/Forms/Input/Input.scss
+++ b/src/components/UI/Forms/Input/Input.scss
@@ -1,3 +1,7 @@
 .input-field {
     width: 100%
 }
+.Invalid {
+    border: 1px solid rgb(248, 238, 238) !important;
+    background-color:salmon !important;
+}
