--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,4 +2,8 @@
 
 .hide-on-med-and-down a.active {
     background-color: $primaryColor !important;
+    
+}
+.brand-logo {
+    font-family: $titleFont;
 }
