--- a/src/components/UI/Forms/Input/Input.scss
+++ b/src/components/UI/Forms/Input/Input.scss
@@ -5,3 +5,6 @@
     border: 1px solid rgb(248, 238, 238) !important;
     background-color:salmon !important;
 }
+.text-placeholder input::placeholder{
+    color: black
+}
